--- a/content/docinfo-footer.html
+++ b/content/docinfo-footer.html
@@ -1,6 +1,5 @@
-<script src="js/toc.js"></script>
+<script src="js/navigation.js"></script>
 <script>
  enableRequestDetailsHideShow();
  createSampleTabs();
- enableToc();
 </script>
