Update content and toolchain

--- a/content/docinfo-footer.html
+++ b/content/docinfo-footer.html
@@ -1,4 +1,5 @@
 <script src="js/navigation.js"></script>
+<script src="js/pageswitch.js"></script>
 <script>
  enableRequestDetailsHideShow();
  createSampleTabs();
