Update poc content and toolchain rev

--- a/content/docinfo-search.html
+++ b/content/docinfo-search.html
@@ -1,6 +1,6 @@
 <div id="search-overlay-wrapper">
     <div id="search-overlay" >
-        <button type="button" class="close">X</button>
+        <button type="button" id="btn-search-close" class="close fa"></button>
         <div id="search-wrapper">
             <input id="search" type="search" value=""
                    autocomplete="off" placeholder="Search..."/>
