--- a/content/docinfo-footer.html
+++ b/content/docinfo-footer.html
@@ -1,5 +1,6 @@
 <script src="js/navigation.js"></script>
 <script src="js/pageswitch.js"></script>
+<script src="js/build-time.js"></script>
 <script>
  enableRequestDetailsHideShow();
  createSampleTabs();
