--- a/content/docinfo.html
+++ b/content/docinfo.html
@@ -4,3 +4,4 @@
 <script src="js/lunr.js" noblob></script>
 <script src="js/sample-tabs.js"></script>
 <script src="js/search.js"></script>
+<script src="js/tracker.js"></script>
