--- a/content/docinfo.html
+++ b/content/docinfo.html
@@ -1,5 +1,6 @@
 <link rel="shortcut icon" href="favicon.ico" />
 <script src="js/swup.min.js"></script>
+<script src="js/swup-preload-plugin.js"></script>
 <script src="js/jquery-3.4.1.min.js" noblob></script>
 <script src="js/lunr.js" noblob></script>
 <script src="js/sample-tabs.js"></script>
