--- a/content/docinfo.html
+++ b/content/docinfo.html
@@ -1,8 +1,7 @@
 <link rel="shortcut icon" href="favicon.ico" />
-<script src="js/swup.min.js"></script>
-<script src="js/swup-preload-plugin.js"></script>
-<script src="js/jquery-3.4.1.min.js" noblob></script>
-<script src="js/lunr.js" noblob></script>
+<script src="js/vendor/swup.min.js"></script>
+<script src="js/vendor/jquery-3.4.1.min.js" noblob></script>
+<script src="js/vendor/lunr.js" noblob></script>
 <script src="js/sample-tabs.js"></script>
 <script src="js/search.js"></script>
 <script src="js/tracker.js"></script>
