--- a/content/docinfo.html
+++ b/content/docinfo.html
@@ -1,4 +1,5 @@
 <link rel="shortcut icon" href="favicon.ico" />
+<script src="js/polyfill-idlecallback.js"></script>
 <script src="js/vendor/swup.min.js"></script>
 <script src="js/vendor/swup-preload-plugin.js"></script>
 <script src="js/vendor/jquery-3.4.1.min.js" noblob></script>
