Update Mermaid images anda JS

--- a/content/docinfo-footer.html
+++ b/content/docinfo-footer.html
@@ -2,6 +2,7 @@
 <script src="js/pageswitch.js"></script>
 <script src="js/build-time.js"></script>
 <script src="js/minitoc.js"></script>
+<script src="js/search.js"></script>
 <script>
  enableRequestDetailsHideShow();
  createSampleTabs();
